--- a/AJO_MEAL/www/index.html
+++ b/AJO_MEAL/www/index.html
@@ -36,7 +36,7 @@
         <link rel="stylesheet" href="css/index.css"> -->
         <script src="https://kit.fontawesome.com/0e80afe050.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/menu.css">
-        <!-- <link rel="stylesheet" href="./css/bootstrap/dist/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="./css/bootstrap/dist/css/bootstrap.min.css">
         <title>Hello World</title>
 
         <script src="js/jquery/dist/jquery.min.js"></script>
