--- a/AJO_MEAL/www/index.html
+++ b/AJO_MEAL/www/index.html
@@ -53,6 +53,7 @@
         </div>
 
         <script src="js/index.js"></script>
+        <script src="js/favoritos.js"></script>
 
         <script>
 
