--- a/AJO_MEAL/www/index.html
+++ b/AJO_MEAL/www/index.html
@@ -35,8 +35,8 @@
         <!-- <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="css/index.css"> -->
         <link rel="stylesheet" href="css/menu.css">
-        <link rel="stylesheet" href="./css/login.css">
-        <link rel="stylesheet" href="./css/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/login.css">
+        <link rel="stylesheet" href="/css/bootstrap/dist/css/bootstrap.min.css">
         <title>Hello World</title>
         
         <script src="js/jquery/dist/jquery.min.js"></script>
@@ -45,7 +45,7 @@
         
 
     </head>
-    <body>
+    <body class="body">
         <div class="nav">
 
         </div>
@@ -56,17 +56,17 @@
 
         <script src="js/index.js"></script>
         <script src="js/favoritos.js"></script>
+        <script src="js/login.js"></script>
 
-        <script>
-
+            <script>
             body = document.querySelector("body");
             navRender = body.querySelector(".nav");
             appRender = body.querySelector(".app");
 
             // De esta manera, al solo llamar la vista parcial de la nav bar, siempre estara presente y dependiendo de que seleccionemos se cargara una vista diferente arriba de ella
-            // loadPartialView("Users/login",document.querySelector(".app"));
-            loadPartialView("buscar", appRender);
-            loadPartialView("navbar", navRender);
+            loadPartialView("Users/login",document.querySelector(".app"));
+            // loadPartialView("buscar", appRender);
+            // loadPartialView("navbar", navRender);
 
         </script>
 
